--- a/rf_demo.ipynb
+++ b/rf_demo.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "# Applying a Random Forest to the iris data set\n",
     "\n",
-    "This notebook accompanies this [blog post](www.something.com)\n",
+    "This notebook accompanies this [blog post](http://philipmgoddard.com/modeling/random_forest)\n",
     "\n",
     "We will use the iris data set to test our model. We will train out model on 80% of the data, and reserve the rest for testing.\n",
     "\n",
